# Web-client

WEBServer/: CMakeLists.txt  auxfunc.h  client.c  client_API.c  client_API.h  main.c
WebClient/: auxfunc.c  client.c  client_API.c  header.h
